fix cropping steps. stop stopper (#377)
* fix cropping steps. stop stopper

* stopper active

* remove bouncing from shop

--- a/app/javascript/components/sign-up/style.less
+++ b/app/javascript/components/sign-up/style.less
@@ -176,15 +176,19 @@
   position: relative;
   margin-top: 20px;
   width: 100%;
-  height: 230px;
+  height: 280px;
 
   .crop-container {
     .reactEasyCrop_Container {
-      height: 230px;
+      min-height: 280px;
 
       .reactEasyCrop_CropArea {
         color: rgb(215 175 187 / 25%) !important;
       }
     }
+  }
+
+  .form-preview__button {
+    margin: 0 !important;
   }
 }
