--- a/app/javascript/components/spinner-page/screens/style.less
+++ b/app/javascript/components/spinner-page/screens/style.less
@@ -209,21 +209,21 @@
     transform: scale(0, 0);
   }
 
-  40% {
-    transform: scale(1, 1);
-  }
-
-  60% {
-    transform: scale(0.95, 0.95);
-  }
-
-  70% {
-    transform: scale(1, 1);
-  }
-
-  80% {
-    transform: scale(1.05, 1.05);
-  }
+  //40% {
+  //  transform: scale(1, 1);
+  //}
+  //
+  //60% {
+  //  transform: scale(0.95, 0.95);
+  //}
+  //
+  //70% {
+  //  transform: scale(1, 1);
+  //}
+  //
+  //80% {
+  //  transform: scale(1.05, 1.05);
+  //}
 
   100% {
     transform: scale(1, 1);
